--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "babel-plugin-styled-components": "^2.1.4",
+    "g": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "rimraf": "^5.0.7",
+    "sass": "^1.77.6",
+    "save-dev": "^0.0.1-security",
+    "styled-components": "^6.1.11",
+    "tailwindcss": "^3.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
